# dev.plone.org

./: .gitignore  README.rst  buildout.cfg
apache/: dev.plone.org.wsgi
apache/dev.plone.org/: trac.conf
apache/dev.plone.org/https/: trac.conf
apache/old-theme/: dev.plone.org.org  trac.xsl
apache/old-theme/modules/: mod-transform-html-xslt-2p2.tgz
apache/old-theme/modules/mod-transform-html-xslt-2p2/: Makefile  Makefile.in  README  aclocal.m4  config.in  config.status  configure  configure.ac  libtool
apache/old-theme/modules/mod-transform-html-xslt-2p2/src/: Makefile  Makefile.am  Makefile.in  mod_transform.c  transform_io.c
apache/old-theme/static/.svn/: all-wcprops  entries
dev.plone.org/conf/: trac.ini  trac.ini.sample  workflow.ini
dev.plone.org/db/: trac.db
dev.plone.org/plugins/: AccountLDAP-0.32-py2.6.egg  BatchModify-0.2.0-py2.5.egg  BatchModify-0.8.0_trac0.11-py2.6.egg  TracCiaNotification-1.0-py2.6.egg  TracOpenIDDelegate-1.0-py2.6.egg  TracSubversionLocation-1.0.1-py2.6.egg  TracTicketDelete-2.0.1-py2.6.egg
dev.plone.org/plugins/eggs/: ticketdeleteplugin?old_path=%2F
egg-cache/: TracCiaNotification-1.0-py2.7.egg  TracVote-0.1.3-py2.7.egg
egg-cache/eggs/0.11/.svn/: all-wcprops
egg-cache/eggs/0.11/TracOpenIDDelegate.egg-info/: SOURCES.txt  top_level.txt
egg-cache/eggs/accountldapplugin/.svn/: all-wcprops
egg-cache/eggs/accountldapplugin/AccountLDAP.egg-info/: PKG-INFO  entry_points.txt
egg-cache/eggs/authopenid-plugin/TracAuthOpenId.egg-info/: PKG-INFO  SOURCES.txt
etc/: trac.ini
src/pbp.recipe.trac/: setup.py
(+119 files in other folders)
